--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "devDependencies": {
     "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
+    "nodemon": "^2.0.15",
     "supervisor": "^0.12.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon ."
   },
   "author": "vitaliykyq",
   "license": "ISC",
